# docker_practice

./: Dockerfile  README.md  pyproject.toml
